k8s/istio-gateway-app.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: java-app-gateway
  namespace: core
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "app.example.com"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: java-app-virtualservice
  namespace: core
spec:
  hosts:
  - "app.example.com"
  gateways:
  - java-app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: java-app-service.core.svc.cluster.local
        port:
          number: 80
